--- a/views/cars/all.handlebars
+++ b/views/cars/all.handlebars
@@ -28,6 +28,11 @@
                 <input type="submit" value="Rent" />
             </form>
         {{/if}}
+        {{#if ../isAdmin}}
+            <form action="/cars/edit/{{this._id}}" method="GET">                
+                <input type="submit" value="Edit" />
+            </form>
+        {{/if}}
     </div>
 {{else}}
     <h2>No cars available</h2>
